# WolfLife

./: CMakeLists.txt  conanfile.txt
Automation/: automation.py  build_sample_script.py
Automation/CMAKE/: CMakeHelpers.cmake
Source/WolfLife/: Application.cpp  Application.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  TextureObject.cpp  TextureObject.h  Utils.cpp  Utils.h  World.cpp  World.h  main.cpp
Source/WolfLife/Agents/: AIVehicle.cpp  AIVehicle.h  Dog.cpp  Dog.h  Sheep.cpp  Sheep.h  Vehicle.cpp  Vehicle.h  Wolf.cpp  Wolf.h
Source/WolfLife/Components/: Collision.cpp  Collision.h  Component.cpp  Component.h  Eyeshot.cpp  Eyeshot.h  Path.cpp  Path.h
conanProfiles/: linuxDebug  linuxRelease  windowsDebug  windowsRelease
